zmodyfikowana lista manuallist nie jest wykonywana przez run