@@ -4,51 +4,52 @@ import javax.swing.*;
 import java.awt.*;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
 
 public class ManualObjectEditor extends JPanel {
-    private JList<String> keyList;       // Lista klawiszy dostępnych do dodania
-    private JList<String> addedKeyList;  // Lista dodanych klawiszy
-    private JButton addButton;           // Przycisk "Add"
-    private JButton deleteButton;        // Przycisk "Delete"
-    private DefaultListModel<String> keyListModel; // Model dla keyList
-    private DefaultListModel<String> addedKeyListModel; // Model dla addedKeyList
+    private JList<String> keyList;
+    private JList<String> addedKeyList;
+    private JButton addButton;
+    private JButton deleteButton;
+    private JButton okButton;
+    private DefaultListModel<String> keyListModel;
+    private DefaultListModel<String> addedKeyListModel;
+    private int selectedIndex;
+    private List<ManualObject> manualList;
+    private Manual manualPanel;
 
-    public ManualObjectEditor() {
-        // Ustawienie layoutu na GridBagLayout dla bardziej elastycznego rozmieszczenia elementów
+    public ManualObjectEditor(int selectedIndex, List<ManualObject> manualList, Manual manualPanel) {
+        this.selectedIndex = selectedIndex;
+        this.manualList = manualList;
+        this.manualPanel = manualPanel;
+
         setLayout(new GridBagLayout());
         GridBagConstraints gbc = new GridBagConstraints();
         gbc.fill = GridBagConstraints.BOTH;
         gbc.insets = new Insets(5, 5, 5, 5);
 
-        // Inicjalizacja modeli list
         keyListModel = new DefaultListModel<>();
         addedKeyListModel = new DefaultListModel<>();
 
-        // Inicjalizacja list z użyciem modeli
         keyList = new JList<>(keyListModel);
         addedKeyList = new JList<>(addedKeyListModel);
 
-        // Inicjalizacja przycisków
         addButton = new JButton("Add");
         deleteButton = new JButton("Delete");
+        okButton = new JButton("OK");
 
-        // Wypełnienie keyListModel klawiszami QWERTY
         populateKeyList();
 
-        // Ustawienie keyList w layout
         gbc.gridx = 0;
         gbc.gridy = 0;
         gbc.weightx = 1.0;
         gbc.weighty = 1.0;
         add(new JScrollPane(keyList), gbc);
 
-        // Ustawienie addedKeyList w layout
         gbc.gridx = 2;
         add(new JScrollPane(addedKeyList), gbc);
 
-        // Ustawienie przycisków w layout
         gbc.gridx = 1;
         gbc.gridy = 0;
         gbc.weightx = 0.0;
@@ -59,7 +60,9 @@ public class ManualObjectEditor extends JPanel {
         gbc.gridy = 1;
         add(deleteButton, gbc);
 
-        // Dodanie nasłuchiwaczy do przycisków
+        gbc.gridy = 2;
+        add(okButton, gbc);
+
         addButton.addActionListener(new ActionListener() {
             @Override
             public void actionPerformed(ActionEvent e) {
@@ -73,11 +76,20 @@ public class ManualObjectEditor extends JPanel {
                 deleteSelectedKey();
             }
         });
+
+        okButton.addActionListener(new ActionListener() {
+            @Override
+            public void actionPerformed(ActionEvent e) {
+                updateExistingObject();
+            }
+        });
+
+        // Initialize fields with the current values of the selected object
+        initializeFields();
     }
 
-    // Metoda do wypełnienia keyListModel klawiszami QWERTY
     private void populateKeyList() {
-        List<String> keys = Arrays.asList(
+        List<String> keys = List.of(
                 "Q", "W", "E", "R", "T", "Y", "U", "I", "O", "P",
                 "A", "S", "D", "F", "G", "H", "J", "K", "L",
                 "Z", "X", "C", "V", "B", "N", "M",
@@ -90,17 +102,13 @@ public class ManualObjectEditor extends JPanel {
         }
     }
 
-    // Metoda do dodawania wybranego klawisza z keyList do addedKeyList
     private void addSelectedKey() {
         String selectedKey = keyList.getSelectedValue();
         if (selectedKey != null) {
-            // Usunięto warunek sprawdzający, czy klawisz już istnieje
-            // Teraz ten sam klawisz może być dodawany wielokrotnie
             addedKeyListModel.addElement(selectedKey);
         }
     }
 
-    // Metoda do usuwania wybranego klawisza z addedKeyList
     private void deleteSelectedKey() {
         String selectedKey = addedKeyList.getSelectedValue();
         if (selectedKey != null) {
@@ -108,20 +116,33 @@ public class ManualObjectEditor extends JPanel {
         }
     }
 
-    // Gettery do uzyskania dostępu do list i przycisków spoza klasy
-    public JList<String> getKeyList() {
-        return keyList;
+    private void updateExistingObject() {
+        if (selectedIndex >= 0 && selectedIndex < manualList.size()) {
+            ManualObject obj = manualList.get(selectedIndex);
+            int[] newCoords = obj.getClickCoords(); // Use existing coordinates or modify as needed
+            List<String> newKeys = new ArrayList<>();
+            for (int i = 0; i < addedKeyListModel.getSize(); i++) {
+                newKeys.add(addedKeyListModel.getElementAt(i));
+            }
+            String newName = "Updated Name"; // Example value; you may want to use a text field for input
+            int newPreDelay = 500; // Example value
+            int newPostDelay = 1000; // Example value
+
+            manualList.set(selectedIndex, new ManualObject(newCoords, newKeys, newName, newPreDelay, newPostDelay));
+            manualPanel.refreshDisplayList(); // Refresh the display list in the main panel
+            JFrame topFrame = (JFrame) SwingUtilities.getWindowAncestor(this);
+            topFrame.dispose();
+        }
     }
 
-    public JList<String> getAddedKeyList() {
-        return addedKeyList;
-    }
-
-    public JButton getAddButton() {
-        return addButton;
-    }
-
-    public JButton getDeleteButton() {
-        return deleteButton;
+    private void initializeFields() {
+        if (selectedIndex >= 0 && selectedIndex < manualList.size()) {
+            ManualObject obj = manualList.get(selectedIndex);
+            // Populate the JLists with the current values from the selected object
+            addedKeyListModel.clear();
+            for (String key : obj.getKeys()) {
+                addedKeyListModel.addElement(key);
+            }
+        }
     }
 }
